PyQuest/tests/semantic_analysis/valid/test012.ql
// Compatible types for greater equals operation
form testForm {
	"First Question"
	someIdentifier : boolean = 10.0 == 10
}